--- a/index.html
+++ b/index.html
@@ -9,116 +9,137 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <style>
-        * {
-            box-sizing: border-box;
-        }
+        /* Importing Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
-        body {
-            font-family: Verdana, sans-serif;
-        }
+/* Variables */
+:root{
+    --font-family: 'Roboto Slab', serif;
+    --normal-font: 400;
+    --bold-font: 700;
+    --bolder-font: 900;
+    --primary-color: #619ddd;
+    --secondary-color: #06305c;
+    --primary-shadow: #8b8eaf;
+    --secondary-shadow: #a17a69;
+    --bg-color: #fcfcfc;
+    --transition: 0.3s
+}
 
-        .mySlides {
-            display: none;
-        }
+html{
+    scroll-behavior: smooth;
+}
 
-        img {
-            vertical-align: middle;
-        }
+/* CSS Reset */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        /* Slideshow container */
-        .slideshow-container {
-            /* max-width: 1000px;*/
-            width: 100%;
-            position: relative;
-            margin: auto;
-            border: 8px solid blue;
-        }
+ul{
+    list-style-type: none;
+}
 
-        /* Caption text */
-        .text {
-            color: #f2f2f2;
-            font-size: 15px;
-            padding: 8px 12px;
-            position: absolute;
-            bottom: 8px;
-            width: 100%;
-            text-align: center;
-        }
+a{
+    text-decoration: none;
+    color: var(--primary-color);
+}
 
-        /* Number text (1/3 etc) */
-        .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
-        }
+a:hover{
+    color: var(--secondary-color);
+}
 
-        /* The dots/bullets/indicators */
-        .dot {
-            height: 15px;
-            width: 15px;
-            margin: 0 2px;
-            background-color: #bbb;
-            border-radius: 50%;
-            display: inline-block;
-            transition: background-color 0.6s ease;
-        }
+body{
+    font-family: var(--font-family);
+}
 
-        .active {
-            background-color: #717171;
-        }
+nav{
+    display: flex;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--bg-color);
+    padding: 1.5rem 3.5rem;
+    box-shadow: 0px 4px 20px 6px rgb(0 0 0 / 10%);
+}
 
-        /* Fading animation */
-        .fade {
-            -webkit-animation-name: fade;
-            -webkit-animation-duration: 1.5s;
-            animation-name: fade;
-            animation-duration: 1.5s;
-        }
+.logo-cc{
+    height: 3rem;
+    width: 3rem;
+}
 
-        @-webkit-keyframes fade {
-            from {
-                opacity: .4
-            }
+.logo-cc img{
+    height: 8rem;
+    width: 8rem;
+}
 
-            to {
-                opacity: 1
-            }
-        }
+nav a{
+    color: var(--primary-color);
+    transition: var(--transition);
+}
 
-        @keyframes fade {
-            from {
-                opacity: .4
-            }
+nav a:hover{
+    color: var(--secondary-color);
+    border-bottom: 2px solid --secondary-color;
+}
 
-            to {
-                opacity: 1
-            }
-        }
+nav ul{
+    display: flex;
+    gap: 6rem;
+}
 
-        /* On smaller screens, decrease text size */
-        @media only screen and (max-width: 300px) {
-            .text {
-                font-size: 11px
-            }
-        }
-        .sliderParent{
-            height: 92.5vh;
-            background-color: #1b1b1b;
-        }
-        .tagLine{
-            color: white;
-        }
+.hamburger-menu{
+    color: var(--primary-color);
+    font-size: 2rem;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    display: none;
+}
+
+.welcome{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
+    max-width: 64rem;
+    margin: 5rem auto;
+}
+
+.welcome-img{
+    height: 16rem;
+    width: 24rem;
+}
+
+.welcome-note{
+    width: 25rem;
+    height: 16rem;
+    border-radius: 6px;
+    padding: 1.625rem;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+}
+
+.welcome-h{
+    margin-bottom: var(--bottom-margin);
+  }
+  
+  .welcome-text{
+    line-height: var(--line-height);
+    padding: 0.3rem 0;
+  }
     </style>
 </head>
 
 <body>
     <div class="whole">
-        <div class="part1">
+        <!-- <div class="part1">
             <div class="logo">
                 <div class="logo-img">
-                    <img src="csf.png" alt="" />
+                    <img src="img/csf.png" alt="" />
                 </div>
                 <div class="logo-title">
                     <h1>CodeChef ITMUR Chapter</h1>
@@ -134,7 +155,21 @@
                     <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </div>
+        </div> -->
+        <nav>
+        <div class="logo-cc">
+            <img src="img/itm_logo.png" alt="">
         </div>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#announcments">Announcments</a></li>
+            <li><a href="#about-us">About Us</a></li>
+        </ul>
+        <button class="hamburger-menu">
+            <ion-icon name="grid-outline"></ion-icon>
+        </button>
+    </nav>
     </div>
     <!-- parent div height = 110vh, child div color 1b1b1b -->
     <div class="sliderParent">
@@ -142,19 +177,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="img/img1.png" style="width:100%">
+                <img src="img/img1.png" style="width:100%" alt="img1">
                 <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="img/img2.png" style="width:100%">
+                <img src="img/img2.png" style="width:100%" alt="img2">
                 <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="img/img3.png" style="width:100%">
+                <img src="img/img3.png" style="width:100%" alt="img3">
                 <div class="text">Caption Three</div>
             </div>
 
@@ -167,27 +202,7 @@
             <span class="dot"></span>
         </div>
 
-        <script>
-            var slideIndex = 0;
-            showSlides();
-
-            function showSlides() {
-                var i;
-                var slides = document.getElementsByClassName("mySlides");
-                var dots = document.getElementsByClassName("dot");
-                for (i = 0; i < slides.length; i++) {
-                    slides[i].style.display = "none";
-                }
-                slideIndex++;
-                if (slideIndex > slides.length) { slideIndex = 1 }
-                for (i = 0; i < dots.length; i++) {
-                    dots[i].className = dots[i].className.replace(" active", "");
-                }
-                slides[slideIndex - 1].style.display = "block";
-                dots[slideIndex - 1].className += " active";
-                setTimeout(showSlides, 10000); // Change image every 2 seconds
-            }
-        </script>
+        <script src="script.js"></script>
         <div class="tagLine">
             <br><br>
             <p>Tag Line</p>
@@ -196,7 +211,7 @@
 
     <div class="part2" id="home" data-aos="fade-right">
         <div class="vector">
-            <img src="vector.png" alt="vector art coding" id="coding-vector" />
+            <img src="img/vector.png" alt="vector art coding" id="coding-vector" />
         </div>
 
         <div class="aboutus-card">
@@ -227,28 +242,28 @@
         </div>
         <div class="p4-sub" data-aos="fade-left">
             <div class="chapter-cards">
-                <img src="vikas.jpg" alt="" />
+                <img src="img/vikas.jpg" alt="" />
                 <div class="info">
                     <h1>Vikas Dinesh Soni</h1>
                     <p>Coding Club President at ITM University</p>
                 </div>
             </div>
             <div class="chapter-cards">
-                <img src="vikas3.jpg" alt="" />
+                <img src="img/vikas3.jpg" alt="" />
                 <div class="info">
                     <h1>Vikas Dinesh Soni</h1>
                     <p>Coding Club President at ITM University</p>
                 </div>
             </div>
             <div class="chapter-cards">
-                <img src="vikas.jpg" alt="" />
+                <img src="img/vikas.jpg" alt="" />
                 <div class="info">
                     <h1>Vikas Dinesh Soni</h1>
                     <p>Coding Club President at ITM University</p>
                 </div>
             </div>
             <div class="chapter-cards">
-                <img src="vikas3.jpg" alt="" />
+                <img src="img/vikas3.jpg" alt="" />
                 <div class="info">
                     <h1>Vikas Dinesh Soni</h1>
                     <p>Coding Club President at ITM University</p>
@@ -259,7 +274,7 @@
 
     <div class="part3" id="about-us">
         <div class="about-vector" data-aos="fade-right">
-            <img src="about.svg" alt="" />
+            <img src="img/about.svg" alt="" />
         </div>
         <div class="p3" data-aos="fade-left">
             <div class="p3-head">
@@ -292,19 +307,19 @@
             <div class="events-bx-row" data-aos="fade-right">
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx1.png" alt="" />
+                        <img src="img/bx1.png" alt="" />
                     </div>
                     <div class="bx-head">Bug Busters</div>
                 </div>
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx2.png" alt="" />
+                        <img src="img/bx2.png" alt="" />
                     </div>
                     <div class="bx-head">Samurai Hack</div>
                 </div>
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx3.png" alt="" />
+                        <img src="img/bx3.png" alt="" />
                     </div>
                     <div class="bx-head">Code Paper</div>
                 </div>
@@ -312,19 +327,19 @@
             <div class="events-bx-row" data-aos="fade-right">
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx4.png" alt="" />
+                        <img src="img/bx4.png" alt="" />
                     </div>
                     <div class="bx-head">Lan War</div>
                 </div>
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx5.png" alt="" />
+                        <img src="img/bx5.png" alt="" />
                     </div>
                     <div class="bx-head">Who am I?</div>
                 </div>
                 <div class="event-bx">
                     <div class="bx-img">
-                        <img src="bx6.png" alt="" />
+                        <img src="img/bx6.png" alt="" />
                     </div>
                     <div class="bx-head">UI/UX Battle</div>
                 </div>
