--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <style>
         /* Importing Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
-
+@font-face {
+    font-family: Overcame;
+    src: url(fonts/Overcame/*);
+}
 /* Variables */
 :root{
-    --font-family: 'Roboto Slab', serif;
+    /* --font-family: 'Roboto Slab', serif; */
+    --font-family: 'Overcame', Regular;
     --normal-font: 400;
     --bold-font: 700;
     --bolder-font: 900;
@@ -64,7 +68,11 @@ nav{
     justify-content: space-between;
     background-color: var(--bg-color);
     padding: 1.5rem 3.5rem;
-    box-shadow: 0px 4px 20px 6px rgb(0 0 0 / 10%);
+    box-shadow: 0px 4px 20px 6px rgb(0 0 0 / 50%);
+    background-color: #1a242e; 
+    position:fixed; 
+    width: 100%;
+    font-size: 24px;
 }
 
 .logo-cc{
@@ -172,9 +180,9 @@ nav ul{
     </nav>
     </div>
     <!-- parent div height = 110vh, child div color 1b1b1b -->
+    <br><br><br><br>
     <div class="sliderParent">
-        <div class="slideshow-container" style="margin-top: 4.5rem;">
-
+        <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <img src="img/img1.png" style="width:100%" alt="img1">
