color of nav items changed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <script src="script.js"></script>
         <div class="tagLine">
             <br><br>
-            <p>Tag Line</p>
+            <p>tagLine</p>
         </div>
     </div>
 
