--- a/index.html
+++ b/index.html
@@ -2,37 +2,27 @@
 <html lang="en">
 
 <head>
+    <!-- meta data -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- css links -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/navbar.css">
+
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- title -->
+    <title>Home Page</title>
 </head>
 
 <body>
-    <div class="whole">
-        <!-- <div class="part1">
-            <div class="logo">
-                <div class="logo-img">
-                    <img src="img/csf.png" alt="" />
-                </div>
-                <div class="logo-title">
-                    <h1>CodeChef ITMUR Chapter</h1>
-                </div>
-            </div>
 
-            <div class="navbar">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about-us">About Us</a></li>
-                    <li><a href="#events">Events</a></li>
-                    <li><a href="#video">Videos</a></li>
-                    <li><a href="#contact-us">Contact Us</a></li>
-                </ul>
-            </div>
-        </div> -->
-        <nav>
+    <!-- Nav Bar Start -->
+    <nav>
         <div class="logo-cc">
             <img src="img/itm_logo.png" alt="">
         </div>
@@ -46,10 +36,11 @@
             <ion-icon name="grid-outline"></ion-icon>
         </button>
     </nav>
-    </div>
-    <!-- parent div height = 110vh, child div color 1b1b1b -->
-    <br><br><br><br>
-    <div class="sliderParent">
+    <!-- Nav Bar End -->
+
+
+    <!-- Slider Start -->
+    <section class="sliderParent">
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
@@ -78,14 +69,16 @@
             <span class="dot"></span>
         </div>
 
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
         <div class="tagLine">
             <br><br>
             <p>tagLine</p>
         </div>
-    </div>
+    </section>
+    <!-- Slider End  -->
 
-    <div class="part2" id="home" data-aos="fade-right">
+    <!-- Intro Section Start  -->
+    <section class="part2" id="home" data-aos="fade-right">
         <div class="vector">
             <img src="img/vector.png" alt="vector art coding" id="coding-vector" />
         </div>
@@ -110,9 +103,12 @@
                 </p>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="part4">
+    <!-- Intro Section End  -->
+
+    <!-- Chapter Leader Section Start  -->
+    <section class="part4">
         <div class="p4-head" data-aos="fade-down">
             <p>Our Chapter Leaders</p>
         </div>
@@ -146,9 +142,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- Chapter Leader Section End -->
 
-    <div class="part3" id="about-us">
+    <!-- About Us Section Start  -->
+    <section class="part3" id="about-us">
         <div class="about-vector" data-aos="fade-right">
             <img src="img/about.svg" alt="" />
         </div>
@@ -173,9 +171,13 @@
                 knowledge.
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="part5" id="events">
+    <!-- About Us Section End -->
+
+
+    <!-- Our Event Section Start  -->
+    <section class="part5" id="events">
         <div class="p5-head" data-aos="fade-up">
             <h1>Our Events</h1>
         </div>
@@ -221,9 +223,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="part6" id="video">
+    <!-- Our Event Section End  -->
+
+    <!-- Video Section Start -->
+    <section class="part6" id="video">
         <div class="p6-title" data-aos="fade-right">
             <h1>Watch Us</h1>
             <h1 id="youtube">On Youtube !</h1>
@@ -234,7 +239,8 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-    </div>
+    </section>
+    <!-- Video Section Start -->
 
     <!-- <div class="part7">
             <div class="contact-form">
@@ -246,7 +252,9 @@
             </div>
         </div> -->
 
-    <div class="part8" id="contact-us">
+
+    <!-- Contact Us Section Start  -->
+    <section class="part8" id="contact-us">
         <div class="contact-form" data-aos="zoom-in">
             <!-- <div class="p8-head">
                     <h1>Contact Us</h1>
@@ -274,13 +282,17 @@
             <h1 id="query">Queries ?</h1>
             <h2>Get In Touch</h2>
         </div>
-    </div>
+    </section>
+    <!-- Contact Us Section End -->
 
+    <!-- Footer Start -->
     <div class="part9">
         <footer>
             <p>&copy; ITM Coding Club</p>
         </footer>
     </div>
+
+    <!-- Footer End -->
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
