fixed navbar and links

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 
     <!-- Nav Bar Start -->
     <nav>
-        <div class="logo-cc">
+        <div class="logo-cc-cc">
             <img src="img/itm_logo.png" alt="">
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#announcments">Announcments</a></li>
             <li><a href="#about-us">About Us</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#video">Video</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
         </ul>
         <button class="hamburger-menu">
             <ion-icon name="grid-outline"></ion-icon>
@@ -70,10 +71,12 @@
         </div>
 
         <script src="js/script.js"></script>
+        <!-- div for tagline start -->
         <div class="tagLine">
             <br><br>
             <p>tagLine</p>
         </div>
+        <!-- div for tagline  -->
     </section>
     <!-- Slider End  -->
 
