--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- Nav Bar Start -->
     <nav>
         <div class="logo-cc-cc">
+            <a href="#top">
             <img src="img/itm_logo.png" alt="">
+            </a>
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -41,7 +43,7 @@
 
 
     <!-- Slider Start -->
-    <section class="sliderParent">
+    <section class="sliderParent" id="top">
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
