--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav>
         <div class="logo-cc-cc">
             <a href="#top">
-            <img src="img/itm_logo.png" alt="">
+                <img src="img/itm_logo.png" alt="">
             </a>
         </div>
         <ul>
@@ -43,42 +43,100 @@
 
 
     <!-- Slider Start -->
-    <section class="sliderParent" id="top">
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="img/img1.png" style="width:100%" alt="img1">
-                <div class="text">Caption Text</div>
+    <section>
+        <div class="sliderParent" id="top">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="img/img1.png" style="width:100%" alt="img1">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="img/img2.png" style="width:100%" alt="img2">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="img/img3.png" style="width:100%" alt="img3">
+                    <div class="text">Caption Three</div>
+                </div>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
 
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="img/img2.png" style="width:100%" alt="img2">
-                <div class="text">Caption Two</div>
+            <script src="js/script.js"></script>
+            <!-- div for tagline start -->
+            <div class="tagLine">
+                <br><br>
+                <p>tagLine</p>
             </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="img/img3.png" style="width:100%" alt="img3">
-                <div class="text">Caption Three</div>
-            </div>
-
+            <!-- div for tagline  -->
         </div>
-        <br>
+        <!-- Div for  -->
+        <svg viewbox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+                <style type="text/css">
+                    .wave {
+                        animation: wave 8s linear infinite;
+                    }
 
-        <div style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
+                    .wave1 {
+                        animation: wave1 10s linear infinite;
+                    }
 
-        <script src="js/script.js"></script>
-        <!-- div for tagline start -->
-        <div class="tagLine">
-            <br><br>
-            <p>tagLine</p>
-        </div>
-        <!-- div for tagline  -->
+                    .wave2 {
+                        animation: wave2 12s linear infinite;
+                    }
+
+                    @keyframes wave {
+                        0% {
+                            transform: translateX(0%);
+                        }
+
+                        100% {
+                            transform: translateX(100%);
+                        }
+                    }
+
+                    @keyframes wave1 {
+                        0% {
+                            transform: scaleY(1.2) translateX(0%);
+                        }
+
+                        100% {
+                            transform: scaleY(1.2) translateX(100%);
+                        }
+                    }
+
+                    @keyframes wave2 {
+                        0% {
+                            transform: scaleY(.8) translateX(0%);
+                        }
+
+                        100% {
+                            transform: scaleY(.8) translateX(100%);
+                        }
+                    }
+                </style>
+                <path id='sineWave' fill="#1b1b1b" fill-opacity=".9"
+                    d="M0,160 C320,300,420,300,740,160 C1060,20,1120,20,1440,160 V0 H0" />
+            </defs>
+            <use class="wave" href="#sineWave" />
+            <use class="wave" x="-100%" href="#sineWave" />
+            <use class="wave1" href="#sineWave" />
+            <use class="wave1" x="-100%" href="#sineWave" />
+            <use class="wave2" href="#sineWave" />
+            <use class="wave2" x="-100%" href="#sineWave" />
+        </svg>
     </section>
     <!-- Slider End  -->
 
