--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <!-- font awsome link  -->
+    <script src="https://kit.fontawesome.com/c16a2977ef.js" crossorigin="anonymous"></script>
+
     <!-- title -->
     <title>Home Page</title>
 </head>
@@ -52,20 +55,20 @@
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img src="img/img1.png" style="width:100%" alt="img1">
-                    <div class="text">Caption Text</div>
+                    <img src="img/banner-campus.jpg.png" style="width:100%" alt="img1">
+                    <!-- <div class="text">Caption Text</div> -->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
                     <img src="img/img2.png" style="width:100%" alt="img2">
-                    <div class="text">Caption Two</div>
+                    <!-- <div class="text">Caption Two</div> -->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
                     <img src="img/img3.png" style="width:100%" alt="img3">
-                    <div class="text">Caption Three</div>
+                    <!-- <div class="text">Caption Three</div> -->
                 </div>
 
             </div>
@@ -80,12 +83,17 @@
             <script src="js/script.js"></script>
             <!-- div for tagline start -->
             <div class="tagLine">
-                <br><br>
-                <p>tagLine</p>
+                <div class="logoDiv">
+                    <!-- <img class="logo" src="img/ITM1.png" alt=""> -->
+                </div>
+                <div>
+                    <p class="welcomeTxt">Welcome to ITM University Raipur </p>
+                    <p class="welcomeTxt" id="codechef">CodeChef College Chapter </p>
+                </div>
             </div>
             <!-- div for tagline  -->
         </div>
-        <!-- Div for  -->
+        <!-- Div for wave animation -->
         <div class="waveWrapper waveAnimation" style="z-index: -500;">
             <div class="waveWrapperInner bgTop">
                 <div class="wave waveTop"
@@ -312,6 +320,7 @@
     <div class="part9">
         <footer>
             <p>&copy; ITM Coding Club</p>
+            <i class="fab fa-twitter"></i>
         </footer>
     </div>
 
@@ -319,7 +328,7 @@
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="js/progressBar.js"></script>
+    <script src="js/progressBar.js" style="size: 2rem;"></script>
     <script>
         AOS.init({
             offset: 200,
