added favicons to footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/progressBar.css" />
     <link rel="stylesheet" href="css/waveAnim.css">
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- font awsome link  -->
@@ -317,18 +318,47 @@
     <!-- Contact Us Section End -->
 
     <!-- Footer Start -->
-    <div class="part9">
-        <footer>
-            <p>&copy; ITM Coding Club</p>
-            <i class="fab fa-twitter"></i>
-        </footer>
-    </div>
+    <footer>
+        <div class="part9">
+            <div class="footerContent">
+                <div>
+                    <p id="copyright">&copy; ITM Coding Club</p>
+                </div>
+                <div>
+                    <address id="emailID">
+                        <a href="mailto:itmraipurchapter21@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                            itmraipurchapter21@gmail.com</a>
+                    </address>
+                </div>
+            </div>
+            <div class="separatorPill">
+            </div>
+            <div>
+                <a href="https://twitter.com/codechefITMUR?t=bmc_DMdKOQnFsGfjnqyU4w&s=0">
+                    <i class="fab fa-twitter fa-3x favicon"></i>
+                </a>
+                <a href="https://www.instagram.com/codechef.itmraipur.chapter/?utm_medium=copy_link"><i
+                        class="fab fa-instagram fa-3x favicon"></i>
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100074007610114">
+                    <i class="fab fa-facebook fa-3x favicon"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/codechef-itm-raipur-chapter-56a231222">
+                    <i class="fab fa-linkedin-in fa-3x favicon"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-youtube fa-3x favicon"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <!-- Footer End -->
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="js/progressBar.js" style="size: 2rem;"></script>
+    <script src="js/progressBar.js""></script>
     <script>
         AOS.init({
             offset: 200,
