chapter leaders modified

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
     </section>
     <!-- Slider End  -->
 
+
+
+
+
     <!-- Intro Section Start  -->
     <section class="part2" id="home" data-aos="fade-right">
         <div class="vector">
@@ -145,12 +149,105 @@
 
     <!-- Intro Section End  -->
 
+
+
+
     <!-- Chapter Leader Section Start  -->
     <section class="part4">
-        <div class="p4-head" data-aos="fade-down">
-            <p>Our Chapter Leaders</p>
+    
+        <div class="coding-club p4-section">
+            <div class="p4-head" data-aos="fade-down">
+                <span>Coding</span>
+                <span>Club</span>
+            </div>
+            <div class="p4-sub coding-club-card" data-aos="fade-left">
+                <div class="chapter-cards">
+                    <img src="img/vikas.jpg" alt="" />
+                    <div class="info">
+                        <h1>Vikas Dinesh Soni</h1>
+                        <p>Coding Club President at ITM University</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="p4-sub" data-aos="fade-left">
+
+
+
+        <div class="Chapter Leaders p4-section">
+            <div class="p4-head" data-aos="fade-down">
+                <span>Chapter</span>
+                <span>Leaders</span>
+            </div>
+            <div class="p4-sub" data-aos="fade-left">
+                <div class="chapter-cards">
+                    <img src="img/Riya.jpg" alt="" />
+                    <div class="info">
+                        <h1>Riya Deshmukh</h1>
+                        <p>CodeChef ITM Raipur Chapter president</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/ashraf.jpg" alt="" />
+                    <div class="info">
+                        <h1>Ashraf Khan</h1>
+                        <p>Programming Lead</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/gaurav.jpg" alt="" />
+                    <div class="info">
+                        <h1>Gaurav Sangevar</h1>
+                        <p>Events Coordinator</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/shruti.jpg" alt="" />
+                    <div class="info">
+                        <h1>Shruti Harwani</h1>
+                        <p>Media and Outreach Lead</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="Volunteers p4-section">
+            <div class="p4-head" data-aos="fade-down">
+                <span>Volunteers</span>
+            </div>
+            <div class="p4-sub" data-aos="fade-left">
+                <div class="chapter-cards">
+                    <img src="img/jaspreet.jpeg" alt="" />
+                    <div class="info">
+                        <h1>Jaspreet Singh Kohli</h1>
+                        <p>Website-Developement</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/ashraf.jpg" alt="" />
+                    <div class="info">
+                        <h1>Ashraf Khan</h1>
+                        <p>Programming Lead</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/gaurav.jpg" alt="" />
+                    <div class="info">
+                        <h1>Gaurav Sangevar</h1>
+                        <p>Events Coordinator</p>
+                    </div>
+                </div>
+                <div class="chapter-cards">
+                    <img src="img/shruti.jpg" alt="" />
+                    <div class="info">
+                        <h1>Shruti Harwani</h1>
+                        <p>Media and Outreach Lead</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- <div class="p4-sub" data-aos="fade-left">
             <div class="chapter-cards">
                 <img src="img/vikas.jpg" alt="" />
                 <div class="info">
@@ -179,7 +276,7 @@
                     <p>Coding Club President at ITM University</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- Chapter Leader Section End -->
 
