update- index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+    <!-- body -->
     <!-- Nav Bar Start -->
     <!-- Progress Bar -->
     <div id="progressBar"></div>
@@ -154,7 +154,7 @@
 
     <!-- Chapter Leader Section Start  -->
     <section class="part4">
-    
+
         <div class="coding-club p4-section">
             <div class="p4-head" data-aos="fade-down">
                 <span>Coding</span>
@@ -246,7 +246,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- <div class="p4-sub" data-aos="fade-left">
             <div class="chapter-cards">
                 <img src="img/vikas.jpg" alt="" />
