--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                     <img src="img/vikas.jpg" alt="" />
                     <div class="info">
                         <h1>Vikas Dinesh Soni</h1>
-                        <p>Coding Club President at ITM University</p>
+                        <p>- Coding Club President &nbsp; &nbsp; at ITM University</p>
+                        <p>-Website Developement</p>
                     </div>
                 </div>
             </div>
@@ -190,21 +191,21 @@
                     <img src="img/ashraf.jpg" alt="" />
                     <div class="info">
                         <h1>Ashraf Khan</h1>
-                        <p>Programming Lead</p>
+                        <p>CodeChef ITM Raipur Chapter Programming Lead</p>
                     </div>
                 </div>
                 <div class="chapter-cards">
                     <img src="img/gaurav.jpg" alt="" />
                     <div class="info">
                         <h1>Gaurav Sangevar</h1>
-                        <p>Events Coordinator</p>
+                        <p> CodeChef ITM Raipur Chapter Events Coordinator</p>
                     </div>
                 </div>
                 <div class="chapter-cards">
                     <img src="img/shruti.jpg" alt="" />
                     <div class="info">
                         <h1>Shruti Harwani</h1>
-                        <p>Media and Outreach Lead</p>
+                        <p> CodeChef ITM Raipur Chapter Media and Outreach Lead</p>
                     </div>
                 </div>
             </div>
@@ -215,70 +216,38 @@
             <div class="p4-head" data-aos="fade-down">
                 <span>Volunteers</span>
             </div>
-            <div class="p4-sub" data-aos="fade-left">
+            <div class="p4-sub Volunteers-card" data-aos="fade-left">
                 <div class="chapter-cards">
                     <img src="img/jaspreet.jpeg" alt="" />
                     <div class="info">
                         <h1>Jaspreet Singh Kohli</h1>
-                        <p>Website-Developement</p>
+                        <p>Website-Developement Team</p>
                     </div>
                 </div>
                 <div class="chapter-cards">
-                    <img src="img/ashraf.jpg" alt="" />
+                    <img src="img/jagriti.jpeg" alt="" />
                     <div class="info">
-                        <h1>Ashraf Khan</h1>
-                        <p>Programming Lead</p>
+                        <h1>Jagriti Ranglani</h1>
+                        <p>Website-Developement Team</p>
                     </div>
                 </div>
                 <div class="chapter-cards">
-                    <img src="img/gaurav.jpg" alt="" />
+                    <img src="img/Bhavjot.jpeg" alt="" />
                     <div class="info">
-                        <h1>Gaurav Sangevar</h1>
-                        <p>Events Coordinator</p>
-                    </div>
-                </div>
-                <div class="chapter-cards">
-                    <img src="img/shruti.jpg" alt="" />
-                    <div class="info">
-                        <h1>Shruti Harwani</h1>
-                        <p>Media and Outreach Lead</p>
+                        <h1>Bhavjot Singh</h1>
+                        <p>Website-Developement Team</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- <div class="p4-sub" data-aos="fade-left">
-            <div class="chapter-cards">
-                <img src="img/vikas.jpg" alt="" />
-                <div class="info">
-                    <h1>Vikas Dinesh Soni</h1>
-                    <p>Coding Club President at ITM University</p>
-                </div>
-            </div>
-            <div class="chapter-cards">
-                <img src="img/vikas3.jpg" alt="" />
-                <div class="info">
-                    <h1>Vikas Dinesh Soni</h1>
-                    <p>Coding Club President at ITM University</p>
-                </div>
-            </div>
-            <div class="chapter-cards">
-                <img src="img/vikas.jpg" alt="" />
-                <div class="info">
-                    <h1>Vikas Dinesh Soni</h1>
-                    <p>Coding Club President at ITM University</p>
-                </div>
-            </div>
-            <div class="chapter-cards">
-                <img src="img/vikas3.jpg" alt="" />
-                <div class="info">
-                    <h1>Vikas Dinesh Soni</h1>
-                    <p>Coding Club President at ITM University</p>
-                </div>
-            </div>
-        </div> -->
+        
     </section>
     <!-- Chapter Leader Section End -->
+
+
+
+
 
     <!-- About Us Section Start  -->
     <section class="part3" id="about-us">
@@ -375,16 +344,10 @@
                 allowfullscreen></iframe>
         </div>
     </section>
-    <!-- Video Section Start -->
-    <!-- <div class="part7">
-            <div class="contact-form">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhCzMFxjZmeqK6EsQMfsJq2MdVwenyDjl_cgc-Ze5S_xoyUw/viewform?embedded=true" width="500" height="629" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </div>
-            <div class="p7-title">
-                <h1 id="query">Queries ?</h1>
-                <h2>Get In Touch </h2>
-            </div>
-        </div> -->
+    <!-- Video Section Ends -->
+    
+
+
     <!-- Contact Us Section Start  -->
     <section class="part8" id="contact-us">
         <div class="contact-form" data-aos="zoom-in">
