Fixed- Nav Bar Added Stuff to Footer

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
     <div id="progressBar"></div>
     <div id="scrollPath"></div>
     <nav>
-        <div class="logo-cc-cc">
+        <div class="logo-cc">
             <a href="#top">
                 <img src="img/College Chapters Logo.svg" alt="" style="overflow: hidden;">
             </a>
         </div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about-us">About Us</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#video">Video</a></li>
-            <li><a href="#contact-us">Contact Us</a></li>
-        </ul>
-        <button class="hamburger-menu">
-            <ion-icon name="grid-outline"></ion-icon>
-        </button>
+        <div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#video">Video</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+            </ul>
+            <button class="hamburger-menu">
+                <ion-icon name="grid-outline"></ion-icon>
+            </button>
+        </div>
     </nav>
     <!-- Nav Bar End -->
 
@@ -447,16 +449,20 @@
             </div>
             <div class="separatorPill">
             </div>
-            <div class="aboutFtr">
-                <div id="aboutHeadingFtr">
-                    <h3>About</h3>
+            <div class="committeeFtr">
+                <div id="committeeHeadingFtr">
+                    <h3>Core Committee</h3>
                 </div>
-                <div id="aboutContentFtr">
-                    <p>With around 30 years of relevant experience marching along with tons of successful
-                        stories,
-                        ITM Group of Institutions
-                        established ITM University Raipur, Chhattisgarh in 2012 with Management & Engineering
-                        programs.</p>
+                <div id="committeeContentFtr">
+                    <p>Vikas Soni - B.Tech Cloud<span style="display: block;">(President Coding Club)</span></p>
+                    <p>Riya Deshmukh - B.Tech Cloud<span style="display: block;">(CodeChef Chapter President)</span></p>
+                    <p>Ashraf Khan - B.Tech Cloud<span style="display: block;">(CodeChef Chapter Programming
+                            Lead)</span></p>
+                    <p>Gaurav Sangewar - BCA Cloud<span style="display: block;">(CodeChef Chapter Events
+                            Coordinator)</span>
+                    </p>
+                    <p>Shruti Harwani - BCA Cloud<span style="display: block;">(CodeChef Chapter Media & Outreach
+                            Lead)</span></p>
                 </div>
             </div>
             <div class="separatorPill" style="width: 0;">
