feature added - nav bar changes color on scroll

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <!-- Progress Bar -->
     <div id="progressBar"></div>
     <div id="scrollPath"></div>
-    <nav>
+    <!-- to edit the js of changing color of navbar goto js/progressBar.js  -->
+    <nav class="nav">
         <div class="logo-cc">
             <a href="#top">
                 <img src="img/College Chapters Logo.svg" alt="" style="overflow: hidden;">
@@ -81,7 +82,7 @@
                 <span class="dot"></span>
             </div>
 
-            <script src="js/script.js"></script>
+            <script src="js/main.js"></script>
             <!-- div for tagline start -->
             <div class="tagLine">
                 <div class="logoDiv">
