--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 </div>
                 <div class="Email text-box">
                     <label for="Email">Email Id</label>
-                    <input type="text" id="Email" placeholder="james@abc.com" required />
+                    <input type="email" id="Email" placeholder="james@abc.com" class="email-box" required />
                 </div>
                 <div class="comment text-box">
                     <label for="comment">Comment</label>
