--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                     <div class="info">
                         <h1>Mr. Manish Taram</h1>
                         <p>Faculty Advisor</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -170,6 +175,11 @@
                     <div class="info">
                         <h1>Mr. Vikas Tiwari </h1>
                         <p>Coding Mentor</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
 
@@ -196,6 +206,11 @@
                         <h1>Vikas Dinesh Soni</h1>
                         <p>- Coding Club President &nbsp; &nbsp; at ITM University</p>
                         <p>-Website Developement</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -203,6 +218,11 @@
                     <div class="info">
                         <h1>Jaspreet Singh Kohli</h1>
                         <p>Website-Developement Team</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -210,6 +230,11 @@
                     <div class="info">
                         <h1>Jagriti Ranglani</h1>
                         <p>Website-Developement Team</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -217,6 +242,11 @@
                     <div class="info">
                         <h1>Bhavjot Singh</h1>
                         <p>Website-Developement Team</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -237,6 +267,11 @@
                     <div class="info">
                         <h1>Riya Deshmukh</h1>
                         <p>CodeChef ITM Raipur Chapter president</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -244,6 +279,11 @@
                     <div class="info">
                         <h1>Ashraf Khan</h1>
                         <p>CodeChef ITM Raipur Chapter Programming Lead</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -251,6 +291,11 @@
                     <div class="info">
                         <h1>Gaurav Sangewar</h1>
                         <p> CodeChef ITM Raipur Chapter Events Coordinator</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="chapter-cards">
@@ -258,6 +303,11 @@
                     <div class="info">
                         <h1>Shruti Harwani</h1>
                         <p> CodeChef ITM Raipur Chapter Media and Outreach Lead</p>
+                        <div class="social-handles">
+                            <i class="fa fa-github"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
+                        </div>
                     </div>
                 </div>
             </div>
